# payment-engine

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  shell.nix
example_inputs/errors/: chargeback_without_dispute.csv  dispute_insufficient_funds.csv  dispute_withdrawals.csv  dispute_wrong_transaction.csv  insufficient_funds.csv  locked_account_activity.csv  negetive_amount.csv  resolve_without_dispute.csv
example_inputs/success/: decimal_4dp.csv  decimal_5dp_rounded.csv  dispute.csv  dispute_chargeback.csv  dispute_resolve.csv
src/cli/: Cargo.toml
src/cli/src/: app.rs  main.rs
src/cli/src/app/: models.rs
src/cli/tests/: basic_operations.rs  chargebacks.rs  common.rs  conflicts.rs  disputes.rs  resolutions.rs  withdrawals.rs
src/engine/: Cargo.toml
src/engine/src/: engine.rs  ledger.rs  lib.rs
src/engine/src/engine/: accounts.rs  core.rs  errors.rs  events.rs  types.rs
src/engine/src/ledger/: in_memory.rs  transactions.rs
src/engine/tests/: README.md
